k8s/base/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: timeoff-http
spec:
  entryPoints:
    - web
  routes:
      ## Default fallback goes to FE
    - match: PathPrefix(`/timeoff`)
      kind: Rule
      middlewares:
      - name: redirectscheme
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: timeoff-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: PathPrefix(`/timeoff`)
      kind: Rule
      priority: 1000
      services:
      - name: timeoff
        port: 3000
      middlewares:
      - name: stripprefix-timeoff
      - name: basic-auth
        namespace: services
  # Use the secret generated by the Traefik's tlsstore
  tls: {}
#    secretName: timeoff-tls
---
# Strip prefix /foobar and /fiibar
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-timeoff
spec:
  stripPrefix:
    prefixes:
      - /timeoff
